Changelog
=========

2020.2.4 (unreleased)
---------------------

- Bump docxcompose to 1.1.0 for header/footer docproperty support. [deiferni]


2020.2.3 (2020-04-04)
---------------------

- Revert always using the `mail_from` for notifications, this breaks customers auto-reply use case. [deiferni]


2020.2.2 (2020-04-03)
---------------------

- Do not show OC checkout and edit buttons when user is in EMM environment. [njohner]
- Prevent documents being edited in Office Online from getting opened in OfficeConnector. [lgraf]
- Add @listing-stats API endpoint to get statistical data from folderish content. [elioschmutz]
- Fix public documentation build. [elioschmutz]


2020.2.1 (2020-03-27)
---------------------

- Backdate AddHiddenFlagToAdminAndOrgUnit upgrade step. [njohner]


2020.2.0 (2020-03-24)
---------------------

- Prevent attempts to edit exclusively checked out documents in Office Online. [lgraf]
- Do not allow to choose inbox of hidden OrgUnit as responsible in forwardings. [njohner]
- Change container title format in task activities. [njohner]
- Disable OfficeOnline action on docs in resolved or inactive dossiers. [lgraf]
- Add hidden flag to OrgUnits and AdminUnits. [njohner]
- Disallow choosing hidden orgunits as responsible_client in tasks and forwardings. [njohner]
- Do not display hidden orgunits in orgunit selector. [njohner]
- Disable regular checkout and edit actions for documents currently being edited in Office Online. [lgraf]
- Add 'Edit in Office Online' file action button in classic UI. [lgraf]
- OfficeOnline: Show specific message for collaborative checkouts. [lgraf]
- Document GET API: Also include info about collaborative checkouts. [lgraf]
- Also return @id in globalindex endpoint. [njohner]
- Extend the document serialization with `checked_out_fullname`. [elioschmutz]
- Add a new profile to setup a cas auth plugin for the ianus portal. [elioschmutz]
- Return actual data in TeamGet and UserGet. [njohner]